styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  --dark-navy: #020c1b;
  --navy: #0a192f;
  --light-navy: #112240;
  --lightest-navy: #233554;
  --navy-shadow: #020c1bb3;
  --dark-slate: #495670;
  --slate: #8892b0;
  --light-slate: #a8b2d1;
  --lightest-slate: #ccd6f6;
  --white: #e6f1ff;
  --green: #64ffda;
  --green-tint: #64ffda1a;
  --tan: tan;
  --border-radius: 8px;
}

body,
html {
  font-family: 'Helvetica', 'Verdana', sans-serif;
  background-color: #f8f8f8;
  margin-left: 2em;
  margin-top: 1em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.top-section {
  display: flex;
  justify-content: start;
  align-items: center;
  margin-bottom: 2em;
}

.headshot-container {
  flex: 0 0 auto;
  margin-right: 2em;
}

.contact-info {
  flex: 1;
  text-align: left;
}

.resume-headshot {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  object-fit: cover;
}

.resume-section {
  margin-bottom: 2em;
  padding: 1em;
  border-radius: 5px;
  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
}

.resume-section h2 {
  margin-bottom: .5em;
  color: #333;
  font-weight: 600;
}

ul {
  padding-left: 20px;
  list-style-type: disc;
}

li {
  margin-bottom: .5em;
  line-height: 1.4;
  font-weight: 400;
}

#education p {
  font-style: italic;
}

.degree {
  font-weight: bold;
  display: block;
  margin-top: 1em;
}

.school {
  display: block;
  margin-bottom: 0.3em;
}

.timeline {
  border-left: 3px solid var(--dark-slate);
  padding-left: 20px;
  margin-left: 20px;
  position: relative;
}

.timeline-entry {
  margin-top: 1em;
}

.timeline-dot {
  width: 10px;
  height: 10px;
  background-color: var(--dark-slate);
  border-radius: 50%;
  position: absolute;
  left: -6px;
  top: 0;
}

.timeline-item {
  margin-bottom: 1em;
  padding-left: 20px;
  position: relative;
}

.timeline-item:before {
  content: '';
  position: absolute;
  left: -10px;
  top: 10px;
  width: 10px;
  height: 10px;
  background-color: var(--dark-slate);
  border-radius: 50%;
}

.timeline-item:after {
  content: '';
  position: absolute;
  left: -6px;
  top: 20px;
  bottom: 0;
  width: 2px;
  background: var(--dark-slate);
}

.timeline-item:last-child:after {
  display: none;
}

.timeline-item h3,
.timeline-item p {
  margin: 0.5em 0;
}

.contact-info h1 {
  margin-bottom: 0.5em;
}

.contact-info p a {
  text-decoration: none;
  color: inherit;
}

.download-button-container {
  position: absolute;
  top: 1em;
  right: 1em;
}

.download-button-container a {
  text-decoration: none;
  color: white;
  background-color: var(--dark-slate);
  padding: 10px 15px;
  border-radius: 5px;
  display: inline-block;
  cursor: pointer;
}

.download-button-container a:hover {
  background-color: var(--lightest-navy);
}

@media (max-width: 768px) {
  .resume {
    padding: 1em;
  }

  body,
  html {
    margin-top: 2em;
  }

  .download-button-container {
    position: absolute;
    top: 1em;
    left: 60%;
    transform: translateX(-50%);
  }

  .contact-info p a {
    display: block;
    margin-bottom: 0.5em;
  }
  .contact-info p .contact-divider { display: none; }
}

@media print {
  .headshot-container {
    display: none;
  }

  .resume-headshot {
    display: none;
  }

  .download-button-container {
    display: none;
  }

  body,
  html {
    font-family: 'Helvetica', 'Verdana', sans-serif;
    margin-left: 2em;
    margin-top: 1em;
    font-size: 12px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  .resume-section {
    margin-bottom: 1em;
    padding: 1em;
    border-radius: 5px;
    font-size: 12px;
    box-shadow: none;
  }

  .top-section {
    display: flex;
    justify-content: start;
    align-items: center;
    margin-bottom: 2em;
  }

  .headshot-container {
    flex: 0 0 auto;
    margin-right: 2em;
  }

  .contact-info {
    flex: 1;
    text-align: left;
    font-size: 14px;
  }

  .resume-headshot {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    object-fit: cover;
  }

  .resume-section h2 {
    margin-bottom: .5em;
    color: #333;
    font-weight: 600;
    font-size: 16px;
  }

  ul {
    padding-left: 20px;
    list-style-type: disc;
    font-size: 12px;
  }

  li {
    margin-bottom: .5em;
    line-height: 1.4;
    font-weight: 400;
  }

  #education p {
    font-style: italic;
    font-size: 12px;
  }

  .degree {
    font-weight: bold;
    display: block;
    margin-top: 1em;
    font-size: 14px;
  }

  .school {
    display: block;
    margin-bottom: 0.3em;
    font-size: 14px;
  }

  .timeline {
    padding-left: 20px;
    margin-left: 20px;
    position: relative;
    font-size: 12px;
  }

  .timeline-entry {
    margin-top: 1em;
  }

  .timeline-item {
    margin-bottom: 1em;
    padding-left: 20px;
    position: relative;
    font-size: 12px;
  }

  .timeline-item h3,
  .timeline-item p {
    margin: 0.5em 0;
    font-size: 14px;
  }

  .contact-info h1 {
    margin-bottom: 0.5em;
    font-size: 18px;
  }
}

